# site-analysis

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  draft-pdf.yml  python-publish.yml
benchmarks/: benchmark_distances.py
docs/: requirements.txt
docs/notes/: pbc-unification-refactoring.md
docs/scripts/: generate_notebooks.py
docs/source/: conf.py  context.md  index.md  index.rst  installation.md  introduction.md  modules.rst  quickstart.ipynb  site_analysis.rst  tutorials.md  tutorials.rst
docs/source/_static/: custom.css
docs/source/concepts/: atoms.md  pbc_handling.md  site_collections.md  sites.md  trajectories.md  what_is_site_analysis.md
docs/source/examples/: 2D_lattice_examples.ipynb  shortest_distance_sites.ipynb  simple_cubic_li.XDATCAR
docs/source/guides/: builders.md  dynamic_voronoi_sites.md  polyhedral_sites.md  reference_workflow.md  residence_times.md  spherical_sites.md  trajectories.md  transition_tables.md  voronoi_sites.md
docs/source/modules/: atom.rst  builders.rst  dynamic_voronoi_site.rst  dynamic_voronoi_site_collection.rst  pbc_utils.rst  polyhedral_site.rst  polyhedral_site_collection.rst  reference_workflow.rst  site.rst  site_collection.rst  spherical_site.rst  spherical_site_collection.rst  tools.rst  trajectory.rst  transition_table.rst  voronoi_site.rst  voronoi_site_collection.rst
docs/source/resources/: publications.md
docs/source/tutorials/: argyrodite_site_definitions.ipynb  residence_times_and_transitions.md  simple_fcc_example.ipynb  temp.cif
example/: Example.ipynb  POSCAR  Shortest distance site example.ipynb  Site labelling example.ipynb  XDATCAR  XDATCAR_Sn  na_sn_all_na_ext.POSCAR.vasp  na_sn_all_na_new.POSCAR.vasp  site_analysis polyhedral sites example.ipynb
example_data/: README.md  XDATCAR
paper/: codemeta.json  paper.bib  paper.md
site_analysis/: __init__.py  _compat.py  analysis.py  atom.py  atoms_trajectory.py  builders.py  containment.py  distances.py  dynamic_voronoi_site.py  dynamic_voronoi_site_collection.py  pbc_utils.py  polyhedral_site.py  polyhedral_site_collection.py  polyhedron.py  shortest_distance_site.py  shortest_distance_site_collection.py  site.py  site_collection.py  site_trajectory.py  sites_trajectory.py  spherical_site.py  spherical_site_collection.py  tools.py  trajectory.py  transition_table.py  voronoi_site.py  voronoi_site_collection.py
site_analysis/reference_workflow/: __init__.py  coord_finder.py  index_mapper.py  reference_based_sites.py  site_factory.py  structure_aligner.py
siteid/: __init__.py  atom.py  atom_trajectory.py  polyhedron.py  tools.py
tests/: benchmark_all_site_types.py  benchmark_before_after.py  benchmark_containment.py  benchmark_dynamic_voronoi.py  test_analysis.py  test_atom.py  test_builders.py  test_containment.py  test_coordinate_integration.py  test_distances.py  test_dynamic_voronoi_site.py  test_dynamic_voronoi_site_collection.py  test_dynamic_voronoi_trajectory.py  test_helpers.py  test_numba_validation.py  test_pbc_utils.py  test_polyhedral_site.py  test_polyhedral_site_collection.py  test_site.py  test_site_collection.py  test_spherical_site.py  test_spherical_site_collection.py  test_tools.py  test_trajectory.py  test_transition_table.py  test_voronoi_site.py  test_voronoi_site_collection.py  validate_decoupling.py
tests/test_reference_workflow/: test_coord_finder.py  test_index_mapper.py  test_reference_based_sites.py  test_reference_based_sites_integration.py  test_site_factory.py  test_site_factory_integration.py  test_structure_aligner.py
tutorials/: README.md  argyrodite_site_analysis.ipynb  comparing_site_definitions.ipynb  plotting.py  residence_times_and_transitions.ipynb
