[project]
name = "site_analysis"
version = "0.2.0"
description = "Analysis tools for tracking ion migration pathways through crystallographic sites"
readme = "README.md"
authors = [
    {name = "Benjamin J. Morgan", email = "example@email.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pymatgen",
    "tqdm",
    "monty",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx>=1.6.3",
    "nbsphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]

[project.urls]
"Homepage" = "https://github.com/username/site_analysis"
"Bug Tracker" = "https://github.com/username/site_analysis/issues"